--- a/app/templates/agents/index.html
+++ b/app/templates/agents/index.html
@@ -12,6 +12,7 @@
 			<a href="/agents/phone" class="{% if list == "phone" %}current{% endif %}">Phonebook</a> |
 			<a href="/agents/postal" class="{% if list == "postal" %}current{% endif %}">Address Book</a> |
 			<a href="/agents/gifts" class="{% if list == "gifts" %}current{% endif %}">Gift List</a> |
+			<a href="/calendar" class="{% if list == "calendar" %}current{% endif %}">Calendar</a> |
 			<a href="/agents/all" class="{% if list == "all" %}current{% endif %}">All</a>
 		</span>
 	</div>
