--- a/app/templates/agents/calendar.html
+++ b/app/templates/agents/calendar.html
@@ -1,7 +1,16 @@
-
-<ul>
-	{%for event in events %}
-		<li>{{event.date.day}} / {{event.date.month}} : <a href="{{event.link}}">{{ event.label }}</a></li>
-	{% endfor %}
-
-</ul>
+{% load humanize %}
+<table>
+{% for event in events %}
+	{% ifchanged event.date.month %}
+	<tr class='monthheader'><td>{{ event.date | date:"F 'y" }}</td></tr>
+	{% endifchanged %}
+	<tr>
+		<td>
+		{% ifchanged event.date %}
+			{{event.date.day|ordinal}} {{event.date|date:'b'|title}}
+		{% endifchanged %}
+		</td>
+		<td><a href="{{event.link}}">{{ event.label }}</a></td>
+	</tr>
+{% endfor %}
+</table>
