--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -22,21 +22,8 @@
   data-admin-utc-offset="{% now "Z" %}">
 
     {% if not is_popup %}
-    <!-- Navbar -->
-    <lucos-navbar bg-colour="#044E00">
-        <a href="/">{% block branding %}{% endblock %}</a>
-        {% block usertools %}
-        {% if has_permission %}
-        <div id="username" style="float: right; font-size: smaller; font-weight: normal;">
-            {% block welcome-msg %}
-                {% firstof user.get_short_name user.get_username %}
-            {% endblock %}
-        </div>
-        {% endif %}
-        {% endblock %}
-        {% block nav-global %}{% endblock %}
-    </lucos-navbar>
-    <!-- END Navbar -->
+
+    {% include "navbar.html" %}
     {% block breadcrumbs %}
     <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
