add language selectior to navbar

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -59,5 +59,6 @@
     {% block footer %}<div id="footer"></div>{% endblock %}
 
     <script src="/resources/lucos_navbar.js" type="text/javascript"></script>
+    <script src="/resources/script.js" type="text/javascript"></script>
 </body>
 </html>
