--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,9 +2,10 @@
     <!-- Navbar -->
     <lucos-navbar bg-colour="#044E00">
         <a href="/">{{ title }}</a>
+        {% include "language-selector.html" %}
         {% block usertools %}
         {% if has_permission %}
-        <div id="username" style="float: right; font-size: smaller; font-weight: normal;">
+        <div id="username" style="float: right; font-size: smaller; font-weight: normal; margin-right: 1em;">
             {% block welcome-msg %}
                 {% firstof user.get_short_name user.get_username %}
             {% endblock %}
