--- a/app/templates/resources/style.css
+++ b/app/templates/resources/style.css
@@ -34,8 +34,13 @@
 .agenttable tr:last-child td {
 	border-bottom: none;
 }
-.agenttable a { text-decoration: none; color: inherit; display:block;}
-.agenttable a:hover { text-decoration: underline; }
+.agenttable .name a {
+	text-decoration: none;
+	color: inherit;
+}
+.agenttable .name a:hover {
+	text-decoration: underline;
+}
 
 .tools { float: right; margin: 5px;}
 .toollink { font-size: 1em; color: #010F00; background-color: #E5B5D1; border-radius: 4px; display: inline-block; max-width: 100px; text-decoration: none; margin-bottom: 5px; padding: 10px 15px; vertical-align: middle; font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif; font-weight: 400; font-size: 13px; }
@@ -138,10 +143,17 @@ a.account.googlephotoprofile:hover {
 	border: #ccc solid 1px;
 }
 .content {
-	display: block;
-	margin: 9px;
 	white-space: pre-line;
+	line-break: anywhere;
 	font-size: 1.1em;
+}
+.content a {
+	color: inherit;
+	font-weight: bold;
+	text-decoration: none;
+}
+.content a:hover {
+	text-decoration: underline;
 }
 #relations {
 	border: solid 2px #500094;
@@ -169,6 +181,10 @@ h2 { text-align: center; }
 	color: #ffe1ca;
 	padding: 5px;
 	cursor: pointer;
+}
+#giftideas .content {
+	display: block;
+	margin: 9px;
 }
 #notes {
 	border: solid 2px #000052;
