--- a/app/templates/admin/500.html
+++ b/app/templates/admin/500.html
@@ -2,10 +2,13 @@
 {% load i18n %}
 
 {% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Server error' %}
-</div>
+<nav id="subnav">
+	<div class="breadcrumbs">
+		<a href="/">{% trans 'Contact List' %}</a>
+		&rsaquo; <a href="{% url 'admin:index' %}">{% trans 'Admin' %}</a>
+		&rsaquo; {% trans 'Server error' %}
+	</div>
+</nav>
 {% endblock %}
 
 {% block title %}{% trans 'Server error (500)' %}{% endblock %}
