--- a/app/templates/admin/change_list.html
+++ b/app/templates/admin/change_list.html
@@ -40,11 +40,12 @@
           {% endblock %}
         </nav>
     {% endblock %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
-&rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
-</div>
+  <div class="breadcrumbs">
+    <a href="/">{% trans 'Contact List' %}</a>
+    &rsaquo; <a href="{% url 'admin:index' %}">{% trans 'Admin' %}</a>
+    &rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
+    &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
+  </div>
 </nav>
 {% endblock %}
 {% endif %}
