update old apple-mobile-web-app-capable which is causing warnings in the console

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -10,7 +10,7 @@
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
 
     <meta name="viewport" content="initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/resources/logo.png"/>
     <link rel="icon" href="/resources/logo.png" />
     <link rel="stylesheet" href="/resources/style.css" />
