--- a/app/templates/agents/base.html
+++ b/app/templates/agents/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="mobile-web-app-capable" content="yes" />
 		<link rel="apple-touch-icon" href="/resources/logo.png"/>
 		<link rel="icon" href="/resources/logo.png" />
 		<link rel="stylesheet" href="/resources/style.css" />
