change urls to be /people, rather than /agents (include a redirect from old paths)

--- a/app/templates/agents/index.html
+++ b/app/templates/agents/index.html
@@ -12,12 +12,12 @@
 	</nav>
 	<div class="breadcrumbs">
 		<span class="navswitch">
-			<a href="/agents/starred" class="{% if list == "starred" %}current{% endif %}">{% trans 'Starred' %}</a> |
-			<a href="/agents/phone" class="{% if list == "phone" %}current{% endif %}">{% trans 'Phonebook' %}</a> |
-			<a href="/agents/postal" class="{% if list == "postal" %}current{% endif %}">{% trans 'Address Book' %}</a> |
-			<a href="/agents/gifts" class="{% if list == "gifts" %}current{% endif %}">{% trans 'Gift List' %}</a> |
+			<a href="/people/starred" class="{% if list == "starred" %}current{% endif %}">{% trans 'Starred' %}</a> |
+			<a href="/people/phone" class="{% if list == "phone" %}current{% endif %}">{% trans 'Phonebook' %}</a> |
+			<a href="/people/postal" class="{% if list == "postal" %}current{% endif %}">{% trans 'Address Book' %}</a> |
+			<a href="/people/gifts" class="{% if list == "gifts" %}current{% endif %}">{% trans 'Gift List' %}</a> |
 			<a href="/calendar" class="{% if list == "calendar" %}current{% endif %}">{% trans 'Calendar' %}</a> |
-			<a href="/agents/all" class="{% if list == "all" %}current{% endif %}">{% trans 'All' %}</a>
+			<a href="/people/all" class="{% if list == "all" %}current{% endif %}">{% trans 'All' %}</a>
 		</span>
 	</div>
 {% endblock %}
