--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" href="/resources/logo.png"/>
     <link rel="icon" href="/resources/logo.png" />
     <link rel="stylesheet" href="/resources/style.css" />
+    <link rel="manifest" href="/manifest.json" />
     <title>{% block headtitle %}{% endblock %}</title>
 </head>
 {% load i18n %}
