--- a/app/templates/agents/base.html
+++ b/app/templates/agents/base.html
@@ -4,9 +4,10 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
 		<meta name="mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="/resources/logo.png"/>
-		<link rel="icon" href="/resources/logo.png" />
+		<link rel="apple-touch-icon" href="/resources/logo-highres.png"/>
+		<link rel="icon" href="/resources/logo-highres.png" />
 		<link rel="stylesheet" href="/resources/style.css" />
+		<link rel="manifest" href="/manifest.json" />
 		<title>{% block headtitle %}{% endblock %}</title>
 	</head>
 	<body>
