add comms to subnav (just link to relevant admin page for now)

--- a/app/templates/agents/index.html
+++ b/app/templates/agents/index.html
@@ -17,6 +17,7 @@
 			<a href="/people/postal" class="{% if list == "postal" %}current{% endif %}">{% trans 'Address Book' %}</a> |
 			<a href="/people/gifts" class="{% if list == "gifts" %}current{% endif %}">{% trans 'Gift List' %}</a> |
 			<a href="/calendar" class="{% if list == "calendar" %}current{% endif %}">{% trans 'Calendar' %}</a> |
+			<a href="/admin/comms">{% trans 'Communications' %}</a> |
 			<a href="/people/all" class="{% if list == "all" %}current{% endif %}">{% trans 'All' %}</a>
 		</span>
 	</div>
