--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" href="/resources/logo.png"/>
     <link rel="icon" href="/resources/logo.png" />
     <link rel="stylesheet" href="/resources/style.css" />
+    <link rel="stylesheet" href="/resources/tom-select.default.css" />
     <link rel="manifest" href="/manifest.json" />
     <title>{% block headtitle %}{% endblock %}</title>
 </head>
@@ -64,6 +65,7 @@
     {% block footer %}<div id="footer"></div>{% endblock %}
 
     <script src="/resources/lucos_navbar.js" type="text/javascript"></script>
+    <script src="/resources/tom-select.complete.js" type="text/javascript"></script>
     <script src="/resources/script.js" type="text/javascript"></script>
 </body>
 </html>
